# pyant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
ant/: ant.py  display.py  grid.py  main.py  types.py
stubs/graphics/: __init__.pyi
tests/: test_grid.py
