[project]
authors = [
  {name = "Alex Pinkney"},
]
dependencies = [
  "graphics-py>=5.0.1.post1",
  "typer>=0.15.1",
]
description = "Implementation of Lanton's Ant, and the more general Turmites"
license = {text = "MIT"}
name = "ant"
readme = "README.md"
requires-python = "<4.0,>=3.13"
version = "0.1.0"

[project.scripts]
pyant = "ant.main:main"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.4",
  "toml-sort>=0.24.2",
]

[tool.mypy]
files = "ant"
strict = true

[tool.pdm.build]
includes = []

[tool.tomlsort]
sort_first = ["project"]
sort_table_keys = true
trailing_comma_inline_array = true

[tool.tomlsort.overrides."dependency_groups"]
inline_arrays = true

[tool.tomlsort.overrides."project.dependencies"]
inline_arrays = true
